salesforce/force-app/main/default/objects/fac_settings__c/fac_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Frame Agreement Console settings (FAC settings) control the behaviour of the application.</description>
    <label>FAC Settings</label>
</CustomObject>