salesforce/force-app/main/default/objects/fac_settings__c/fields/account_fields__c.field-meta.xml
<CustomField>
    <fullName>account_fields__c</fullName>
    <description>Additional fields to be shown in account table while associating them with Frame Agreement</description>
    <inlineHelpText>Name,csfam__Active__c,Type</inlineHelpText>
    <label>Account Fields</label>
    <type>TextArea</type>
</CustomField>