salesforce/force-app/main/default/objects/fac_settings__c/fields/active_status__c.field-meta.xml
<CustomField>
    <fullName>active_status__c</fullName>
    <description>Used to define which Frame Agreement status value is used for activating Frame Agreement</description>
    <inlineHelpText>Active</inlineHelpText>
    <label>Active Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>