salesforce/force-app/main/default/objects/fac_settings__c/fields/active_status_management__c.field-meta.xml
<CustomField>
    <fullName>active_status_management__c</fullName>
    <defaultValue>true</defaultValue>
    <description>On threshold breach while negotiating: FAM will automatically change status of FA to requires_approval_status__c. If all charges are within the threshold limits, it will return it back to draft_status__c.</description>
    <label>Active Status Management</label>
    <type>Checkbox</type>
</CustomField>