salesforce/force-app/main/default/objects/fac_settings__c/fields/approval_process_name__c.field-meta.xml
<CustomField>
    <fullName>approval_process_name__c</fullName>
    <description>Name of the approval process which will be invoked as a result of the negotiation</description>
    <inlineHelpText>FA Approval</inlineHelpText>
    <label>Approval Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>