salesforce/force-app/main/default/objects/fac_settings__c/fields/approved_status__c.field-meta.xml
<CustomField>
    <fullName>approved_status__c</fullName>
    <description>Once Frame Agreement is approved we will change the status to this value</description>
    <inlineHelpText>Approved</inlineHelpText>
    <label>Approved Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>