salesforce/force-app/main/default/objects/fac_settings__c/fields/approvers_revise__c.field-meta.xml
<CustomField>
    <fullName>approvers_revise__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow approver to edit FA while in &quot;Pending&quot; state.</description>
    <label>Approvers revise</label>
    <type>Checkbox</type>
</CustomField>