salesforce/force-app/main/default/objects/fac_settings__c/fields/certificate_name__c.field-meta.xml
<CustomField>
    <fullName>certificate_name__c</fullName>
    <description>Certificate name used to authorize dispatchcer service without extensions.</description>
    <inlineHelpText>selfsigned</inlineHelpText>
    <label>Security Certificate Name</label>
    <type>TextArea</type>
</CustomField>