salesforce/force-app/main/default/objects/fac_settings__c/fields/closed_status__c.field-meta.xml
<CustomField>
    <fullName>closed_status__c</fullName>
    <description>Status of Frame Agreement once it becomes closed replaced. E.g. when a new version is activated.</description>
    <inlineHelpText>Closed Replaced</inlineHelpText>
    <label>Closed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>