salesforce/force-app/main/default/objects/fac_settings__c/fields/decimal_places__c.field-meta.xml
<CustomField>
    <fullName>decimal_places__c</fullName>
    <description>Fields containing price will be rounded to maximum this much decimals.</description>
    <label>Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>