salesforce/force-app/main/default/objects/fac_settings__c/fields/decomposition_chunk_size__c.field-meta.xml
<CustomField>
    <fullName>decomposition_chunk_size__c</fullName>
    <description>Number of items we will process on decomposition in one remote action. Used to tweak performance in case of issues with Salesforce limits.</description>
    <label>Decomposition Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>