salesforce/force-app/main/default/objects/fac_settings__c/fields/discount_as_price__c.field-meta.xml
<CustomField>
    <fullName>discount_as_price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, negotiated discount will be shown as new price instead of price difference.</description>
    <label>Discount As Price</label>
    <type>Checkbox</type>
</CustomField>