salesforce/force-app/main/default/objects/fac_settings__c/fields/dispatcher_service_url__c.field-meta.xml
<CustomField>
    <fullName>dispatcher_service_url__c</fullName>
    <description>Url endpoint of dispatcher service.</description>
    <label>Dispatcher Service Url</label>
    <type>TextArea</type>
</CustomField>