salesforce/force-app/main/default/objects/fac_settings__c/fields/draft_status__c.field-meta.xml
<CustomField>
    <fullName>draft_status__c</fullName>
    <description>Used to define which status will be used in Draft state.</description>
    <inlineHelpText>Draft</inlineHelpText>
    <label>Draft Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>