salesforce/force-app/main/default/objects/fac_settings__c/fields/fa_editable_statuses__c.field-meta.xml
<CustomField>
    <fullName>fa_editable_statuses__c</fullName>
    <description>CSV list of statuses in which editing and negotiation can happen.</description>
    <inlineHelpText>Draft, Requires Approval</inlineHelpText>
    <label>FA Editable Statuses</label>
    <type>TextArea</type>
</CustomField>