salesforce/force-app/main/default/objects/fac_settings__c/fields/fa_number_prefix__c.field-meta.xml
<CustomField>
    <fullName>fa_number_prefix__c</fullName>
    <description>Prefix that is going to be assigned to Frame Agreement Number.</description>
    <inlineHelpText>FA_</inlineHelpText>
    <label>FA Number Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>