salesforce/force-app/main/default/objects/fac_settings__c/fields/frame_agreement_fields__c.field-meta.xml
<CustomField>
    <fullName>frame_agreement_fields__c</fullName>
    <description>Additional Frame Agreement fields to show in FAM.</description>
    <inlineHelpText>csconta__agreement_level__c, csconta__Valid_From__c</inlineHelpText>
    <label>Frame Agreement Fields</label>
    <type>TextArea</type>
</CustomField>