salesforce/force-app/main/default/objects/fac_settings__c/fields/input_minmax_restriction__c.field-meta.xml
<CustomField>
    <fullName>input_minmax_restriction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true prevents user to input value less than 0 and greater than charges original value.</description>
    <label>Negotiate min/max restriction</label>
    <type>Checkbox</type>
</CustomField>