salesforce/force-app/main/default/objects/fac_settings__c/fields/is_ps_enabled__c.field-meta.xml
<CustomField>
    <fullName>is_ps_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Property enables the usage of pricing service in the application</description>
    <label>Enable Pricing Service</label>
    <type>Checkbox</type>
</CustomField>