salesforce/force-app/main/default/objects/fac_settings__c/fields/new_frame_agreement__c.field-meta.xml
<CustomField>
    <fullName>new_frame_agreement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle visibility of &quot;New Frame Agreement&quot; button</description>
    <inlineHelpText>Requires Approval</inlineHelpText>
    <label>Show New Frame Agreement</label>
    <type>Checkbox</type>
</CustomField>