salesforce/force-app/main/default/objects/fac_settings__c/fields/price_item_fields__c.field-meta.xml
<CustomField>
    <fullName>price_item_fields__c</fullName>
    <description>Populate if additional fields should be displayed in Commercial Product lists.</description>
    <label>Price Item Fields</label>
    <type>TextArea</type>
</CustomField>