salesforce/force-app/main/default/objects/fac_settings__c/fields/product_chunk_size__c.field-meta.xml
<CustomField>
    <fullName>product_chunk_size__c</fullName>
    <description>Size of products to be loaded in one remote action.</description>
    <label>Product Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>