salesforce/force-app/main/default/objects/fac_settings__c/fields/rcl_fields__c.field-meta.xml
<CustomField>
    <fullName>rcl_fields__c</fullName>
    <description>Additional Rate Card Line fields used for filtering.</description>
    <inlineHelpText>description__c</inlineHelpText>
    <label>RCL Fields</label>
    <type>TextArea</type>
</CustomField>