salesforce/force-app/main/default/objects/fac_settings__c/fields/requires_approval_status__c.field-meta.xml
<CustomField>
    <fullName>requires_approval_status__c</fullName>
    <description>Used to define which Frame Agreement status will be used when approval is required.</description>
    <inlineHelpText>Requires Approval</inlineHelpText>
    <label>Requires Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>