salesforce/force-app/main/default/objects/fac_settings__c/fields/show_volume_fields__c.field-meta.xml
<CustomField>
    <fullName>show_volume_fields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, additional volume and usage fields will be shown for each Commercial Product</description>
    <label>Show Volume Fields</label>
    <type>Checkbox</type>
</CustomField>