salesforce/force-app/main/default/objects/fac_settings__c/fields/standalone_addon_fields__c.field-meta.xml
<CustomField>
    <fullName>standalone_addon_fields__c</fullName>
    <description>CSV of fully qualified field names to be used when showing standalone addons</description>
    <label>Standalone Addon Fields</label>
    <type>TextArea</type>
</CustomField>