salesforce/force-app/main/default/objects/fac_settings__c/fields/truncate_product_fields__c.field-meta.xml
<CustomField>
    <fullName>truncate_product_fields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to create a nicer UI by truncating long values in custom fields.</description>
    <label>Truncate CP Fields</label>
    <type>Checkbox</type>
</CustomField>