salesforce/force-app/main/default/objects/fac_settings__c/fields/usage_type_fields__c.field-meta.xml
<CustomField>
    <fullName>usage_type_fields__c</fullName>
    <description>Additional Usage type fields.</description>
    <inlineHelpText>mv,mvp</inlineHelpText>
    <label>Usage Type Fields</label>
    <type>TextArea</type>
</CustomField>