salesforce/force-app/main/default/objects/fac_settings__c/fields/volume_fields_visibility__c.field-meta.xml
<CustomField>
    <fullName>volume_fields_visibility__c</fullName>
    <description>Additional fields to be shown in account table while associating them with Frame Agreement. On the condition that csfam__show_volume_fields__c is set to true: here you can list volume fields you want to show. Fields are respresented with abbreviation (mv,mvp,muc,mucp)</description>
    <inlineHelpText>mv,mvp</inlineHelpText>
    <label>Volume Fields Visibility</label>
    <type>TextArea</type>
</CustomField>